--- a/PdbLibrary/packages.config
+++ b/PdbLibrary/packages.config
@@ -1,2 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages />
+<packages>
+  <package id="log4net" version="2.0.12" targetFramework="net452" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+</packages>
